--- a/index1.html
+++ b/index1.html
@@ -12,21 +12,8 @@
     <link rel=""stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <div class="container" > 
-        <div class="row mt-5 ">
-            <div class="card mb-5  col-md-6 shadow p-3 mb-5 bg-body-tertiary rounded">
-                   <h1 class="fs-bold">Free</h1>
-                   <p class="text-black-50 ">for freelancers</p>
-                   <h2 class="fs-1 mt-4 md-5 ">0$</h2>
-
-            </div>
-
-            <div class="card col-md-6">
-            Col2
-            </div>
-        </div>
-    </div>
+    <div></div>
+    <h1>Poppins</h1>
     <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
